--- a/Flight Frontline 1945/Flight Frontline 1945/Flight Frontline 1945.vcxproj.filters
+++ b/Flight Frontline 1945/Flight Frontline 1945/Flight Frontline 1945.vcxproj.filters
@@ -15,15 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1945.c">
+    <ClCompile Include="main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ConsoleControl.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ConsolePaint.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Flight Title.h">
+    <ClInclude Include="ConsolePaint.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Flight Init.h">
+    <ClInclude Include="ConsoleControl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
